[package]
name = "blinking-led"
version = "0.1.0"
authors = ["neonew"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
log = { version = "0.4.22" }
xtensa-lx-rt = "0.16.0"
xtensa-lx = "0.7.0"
panic-halt = "0.2.0"
esp8266-hal = { version = "0.5.0", optional = true }
esp8266 = "0.6.0"
embedded-hal = { version = "0.2.4", features = ["unproven"] }

[features]
default = ["xtensa-lx-rt/esp8266", "xtensa-lx/esp8266", "esp8266-hal"]

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
